vlib/v/parser/tests/map_key_twice_err.vv
_ := map[u8][u8]{}

